--- a/css/facturesVerification.css
+++ b/css/facturesVerification.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
+ 
  
 }
 
@@ -409,3 +409,10 @@ input[type="submit"]:hover {
   background-color: black;
 }
 
+.payer ::value { 
+text-align: top; /* Centrer horizontalement le texte */
+position: relative;
+bottom : 10px;
+
+  
+}
